--- a/QuanLyTourDuLich/QuanLyTour.resx
+++ b/QuanLyTourDuLich/QuanLyTour.resx
@@ -99,7 +99,7 @@
   <data name="button11.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsQAAALEAGtI711AAAAB3RJ
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsOAAALDgFAvuFBAAAAB3RJ
         TUUH5QsMBgIjI4fBegAADWRJREFUaEO9Wgl0VNUZvqDWDUUpUg1kJjsRMeyLiAi4UI9FEUQhhGSSyUKE
         RJNgwaKyyHJA0aJVREVFq4K0VkFwRVGPolirRYEAssmeZd5985YB1N5+/31vIJm5mQmI3nO+M8u7y//d
         f713hv3SZszNYdpNjOnlWYwXpTGe72Xa2EuADiwwvDWr7csk6m85D98lymc834O+qUwf34npgzB22s3u
@@ -185,32 +185,6 @@
         YVc/fyZHAcFPpgqiKEKNfWFvfw9ndIHHcehXyNSxSviOphUMsLJm6XhVtdnzW2vwahaXitEqNG8cikHh
         OehHLwq5LWCWIscN1RhoTDMJGu2W+u7WutWuLH+6jhgt3Mj4BLMeWMfn3qKlqG0+o4ySpqumdU6QDgBO
         dK0W1008cYMkxGO0br6eFeJql82x4dF7gpI4NxueqY1WVtFCEUIRQhFCEUIRQhFCEUIX/9k=
-</value>
-  </data>
-  <data name="button14.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAgFBgcGBQgHBgcJCAgJDBMMDAsLDBgREg4THBgdHRsYGxof
-        IywlHyEqIRobJjQnKi4vMTIxHiU2OjYwOiwwMTD/2wBDAQgJCQwKDBcMDBcwIBsgMDAwMDAwMDAwMDAw
-        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDD/wAARCAAyADIDAREAAhEBAxEB/8QA
-        GwAAAgIDAQAAAAAAAAAAAAAABAYABQEHCAP/xAA2EAACAQMCAwYCBwkAAAAAAAABAgMEBREABhIhMQcT
-        QVFhcRSRIkKBk6Gx0RUjMjRDUlRywf/EABoBAQADAQEBAAAAAAAAAAAAAAABAwUEAgb/xAAoEQACAgAF
-        AgUFAAAAAAAAAAAAAQIDBBESITEFMhRBUWHBBhMiI3H/2gAMAwEAAhEDEQA/AN/6Artx3aKxWOsudQrG
-        KljLtwqWx6nHPHmfAZOgOe92duu4bk4jsKR2iADm/CJJX+1shfDkAffQC9bu1ne9BUiYX2WpGcmOpjR0
-        b0xgEfYRoDoLsr7QaXfdpkfu1pbjS4Wppw2QM9HU+KnB9QRj1IDpoCaAhIAydAKfa2JW7Nb8sDFXakZc
-        g45EgH8M6A1ZXdnGy6ymhjpbmlJPEgjaWGqRxIw5EsrEjJPljWSsTcnuszSeHqa2YEnZJYaScC47kkK9
-        e7HdxsR7kn8te/GWNfjE8+Fgu6Q69jFpobFunc1LaJkmt8kNJNEyyiUqT3gZSw9QfnrsonKcM5cnJdCM
-        JZR4Nrjpq8qJoDBAPXQAG4aX420VFM0SzpIArxMMh1zzGPHI1TepOt6OS2nTrWrgQ6SgnpbMtohpYFhj
-        jMCScQKBOYB4MZzjw8/HWK5Jy1tmqoyUdGRm12iGwrLFaaKL4aXhbgQhGVgoUnJ6ghQffPnqJTdnc9yY
-        w+32rYvdh2cUFRXVYpooXrXaWdox/E5YkDOBnA5Z1o4Ryk2/Lg4MTGMUl5jdrQOMmgJoCaAU7lGkFwmi
-        Q8gQceWeesDEQ0WNI2qJ6602DMwVSzdBqgvG23QrBRxIv9uSfMnnr6GmChBRRhWzc5uQRq0rJoCg3HvO
-        w7dcxXKuVagKG7iMF5MHpyHT7caAUJ+1g1X0rVbSsQfHHUN9Jh44UdPmdRmBqljgu9JFUwvnvFDxSeh5
-        89U3UxtjvyXVWut7cAtlpY5V+KeVJwGIXhbiUEHBPvqmnBut52rf0LJ4yN0f0vNeoFdt8SWm6vSQ0yVM
-        MIw+WKtx9SAenkOnXXacp62LtT23cwqVM722Y/Vqlwuf9xkfPGozA6qwZQynIIyCPHUg5r7RqhqnfN5k
-        Y5xUmMeygL/zXkkr7I/78o0jDIyqZ5E6A2JtjcSQ2OttFZxgNDIaaRWIwx+p88n8NX4ZZ2xXucHUZ6MJ
-        ZL2Z7bZvEVktlfyaSeRk7lOL6OcNlsenL35DWh1FZaX/AEwPpubkrIv2+RP3DOwonkaeRJXbIKnBcnrn
-        89ZLPrRUxkEefLUEm/Nt7q4du2xXKlhSRA58+AakgU9w26hkv1xeSjp2ZqmQlmiUkniPpoSCQWygEyEU
-        NMCGHMRL+mgLhaCjBBFJB1H9MfpqY7NNHiaTi0/QMkoqXi/lofuxrqxMm5bszOlQjCl6Vlv8Ip71b6J5
-        YuOjp2wpxmJT4+2uQ1QD9l2//BpfuV/TQkZ6CjpVoacLTQgCNQAEHLloQf/Z
 </value>
   </data>
   <data name="button10.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -319,6 +293,32 @@
         3crdviFrJpDOLtGDLaAPlUuwYEGmRG4NOiMxozQshppAShIt3AbcvVsN5JUZNd4ASIFKN79fXr+8YrNE
         O0sNJct3W128jb6YKK4QA6U2FtdrdNZH2FsFFACSkEnfSD/ig/yfqcFFZO17df8AZ/xH0HhgorIA1Ad2
         oD/JA/k/U4KKC57PVffRe/XQT998FFdhA7TTYW12t01kfbbBRSyPHjrjtLWw2pSkJJJSCSbc8FFf/9k=
+</value>
+  </data>
+  <data name="button14.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAgFBgcGBQgHBgcJCAgJDBMMDAsLDBgREg4THBgdHRsYGxof
+        IywlHyEqIRobJjQnKi4vMTIxHiU2OjYwOiwwMTD/2wBDAQgJCQwKDBcMDBcwIBsgMDAwMDAwMDAwMDAw
+        MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDD/wAARCAAyADIDAREAAhEBAxEB/8QA
+        GwAAAgIDAQAAAAAAAAAAAAAABAYABQEHCAP/xAA2EAACAQMCAwYCBwkAAAAAAAABAgMEBREABhIhMQcT
+        QVFhcRSRIkKBk6Gx0RUjMjRDUlRywf/EABoBAQADAQEBAAAAAAAAAAAAAAABAwUEAgb/xAAoEQACAgAF
+        AgUFAAAAAAAAAAAAAQIDBBESITEFMhRBUWHBBhMiI3H/2gAMAwEAAhEDEQA/AN/6Artx3aKxWOsudQrG
+        KljLtwqWx6nHPHmfAZOgOe92duu4bk4jsKR2iADm/CJJX+1shfDkAffQC9bu1ne9BUiYX2WpGcmOpjR0
+        b0xgEfYRoDoLsr7QaXfdpkfu1pbjS4Wppw2QM9HU+KnB9QRj1IDpoCaAhIAydAKfa2JW7Nb8sDFXakZc
+        g45EgH8M6A1ZXdnGy6ymhjpbmlJPEgjaWGqRxIw5EsrEjJPljWSsTcnuszSeHqa2YEnZJYaScC47kkK9
+        e7HdxsR7kn8te/GWNfjE8+Fgu6Q69jFpobFunc1LaJkmt8kNJNEyyiUqT3gZSw9QfnrsonKcM5cnJdCM
+        JZR4Nrjpq8qJoDBAPXQAG4aX420VFM0SzpIArxMMh1zzGPHI1TepOt6OS2nTrWrgQ6SgnpbMtohpYFhj
+        jMCScQKBOYB4MZzjw8/HWK5Jy1tmqoyUdGRm12iGwrLFaaKL4aXhbgQhGVgoUnJ6ghQffPnqJTdnc9yY
+        w+32rYvdh2cUFRXVYpooXrXaWdox/E5YkDOBnA5Z1o4Ryk2/Lg4MTGMUl5jdrQOMmgJoCaAU7lGkFwmi
+        Q8gQceWeesDEQ0WNI2qJ6602DMwVSzdBqgvG23QrBRxIv9uSfMnnr6GmChBRRhWzc5uQRq0rJoCg3HvO
+        w7dcxXKuVagKG7iMF5MHpyHT7caAUJ+1g1X0rVbSsQfHHUN9Jh44UdPmdRmBqljgu9JFUwvnvFDxSeh5
+        89U3UxtjvyXVWut7cAtlpY5V+KeVJwGIXhbiUEHBPvqmnBut52rf0LJ4yN0f0vNeoFdt8SWm6vSQ0yVM
+        MIw+WKtx9SAenkOnXXacp62LtT23cwqVM722Y/Vqlwuf9xkfPGozA6qwZQynIIyCPHUg5r7RqhqnfN5k
+        Y5xUmMeygL/zXkkr7I/78o0jDIyqZ5E6A2JtjcSQ2OttFZxgNDIaaRWIwx+p88n8NX4ZZ2xXucHUZ6MJ
+        ZL2Z7bZvEVktlfyaSeRk7lOL6OcNlsenL35DWh1FZaX/AEwPpubkrIv2+RP3DOwonkaeRJXbIKnBcnrn
+        89ZLPrRUxkEefLUEm/Nt7q4du2xXKlhSRA58+AakgU9w26hkv1xeSjp2ZqmQlmiUkniPpoSCQWygEyEU
+        NMCGHMRL+mgLhaCjBBFJB1H9MfpqY7NNHiaTi0/QMkoqXi/lofuxrqxMm5bszOlQjCl6Vlv8Ip71b6J5
+        YuOjp2wpxmJT4+2uQ1QD9l2//BpfuV/TQkZ6CjpVoacLTQgCNQAEHLloQf/Z
 </value>
   </data>
   <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -453,6 +453,56 @@
         WuHCkNyI7UZAQ82dUubalQPkSSaQcTx+2QH4UO0RGo8hBQ8gNA8xJ6KJ3I9awf7QdkGW8KdXYTn3U6kN
         Smgf6qHzB8wd1KuryxKSksI9I0qKx7IIGT2dq5W53jZXspJ2U2oeKVDoR/tKiWJWlKUAqKyDHrdk1pct
         1yZ5jK90qTsptXRST0IpSgObE8Tt+H2lUCAp1wLcLrjjxBUtRAHQADYAaClKUB//2Q==
+</value>
+  </data>
+  <data name="button13.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAIAAACRXR/mAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5QsMDSkOHH2PhwAACgxJREFU
+        WEfFWPlTW9cV5o9pp2k7bepk2pnOtD+1rtMmdhPXncZ27HhJvCVNYmfp5iUel3hjM6sAg4MxYLywGCOB
+        2cHsRsZGCDACYUDsi4Skpyc9Sbfffe+it1jYD/cHf3NG8+67597z3XPOPfc+xZCXho8jvR3kShI5foh8
+        uo0c2EJ/jx8kuYnkYTvt/T/wUrTCYdJvJkknyeH3yJ5NTPa+JT8fepckniAWM9V8KayfVsBP7l6njvlw
+        I9krsokim2jvJ9tIRRHx82zgerBOWkKA3Mwl+99m7nm+QGf/n0hxNl3JOrFOWjVl5KN3tJw+/APZvVH+
+        VXZB86O3SXUJG64b66E1NkyO7SR7FIbx/PFmEnuMFGXRyBZlku++JAc2a3W+2EFGh9gk+qCbVihENx3N
+        J4W9b/aQ1lrCeZgOwHlJWx35x16V2zAqJ57OoBu6aU2Nk6Nw1Wr48PDlLjLwiPVqMNRHvtqtUobDHE9Z
+        rw7optVSzWxIsu+PL8gYZCF0lEOaTKxLB3TTKkinGS0ZQPgQpoVZ1hUVi3Pkn/vkJMPYq6msSwf00UJa
+        pJ6RaeEB1VIQWG9UBAVy6ZRqyKVvSTDIel8EfbRgI/GkykZaLAk/N4VR3zPPq4bE/4eWPX3QR0tjAzvr
+        /DcvKN8ooXH/lncuxmac1b8ZdefWnUJ5z9OdtZ1M2FlXVDjGyNEd8mbE2LJ81qUDumnh3D24hdmQmBUa
+        1jyJ8f56tswJgvtF3wPWqwO6aa04yakjKocdeo80VEZhhjeoBdLlQlLGqBOHiGuZKeiAblrArVxV7YZV
+        2IbPJkZpnoWC9BeRxUGk5ATBqOLLbBJ9eAEtv9/v5TgqPM/194ZwV1HawzPk8/fJua9J8rf09/Pt7KVC
+        J3TkL5zFjBnYVByHaZmBNbAmLdfKSk19fWZuborBkJKZCUlNT+v/THGkKAzTHYe9ht9ovdbPdqWlp0mT
+        UDEYMC0mhwlm7BlEp+XxevOLis7Fx98uL6+qqTGJYqyttVzPIwf/vPbtL5oc2NJf9D3GSpNAMCGmPRsf
+        n3/9OjzHTKoRnVZ3T0/sxYvWgQHWjgDZg7typBq9UKCZcDxqhbNYrTABQ6ytRhRawWDwWnFxXkEBHtgr
+        JfBZoddhm2hdMLexgWpgcpgoKC4ORquxUWgtLi3FXbp0v72dtTVAtqac1uUw6OBYXPswaGlri0tOXlpa
+        Ym0FotB61NeHwE86HKwtgg8FVwS/IJ2D1ofkyNYo2a0U9B7eSiwsRqFw2CMEXAHejzqyigmHA4YeWyys
+        rUAUWqV37mCn8Lxqlf2u+Q86yw/3GE9YmhqnR0hOgqqGPStwVXYcPeMJmeRWjvc1/K29ZFvbrb+bq+we
+        Vld9PJ+Zk1NaUSE1ldDScrvdyRkZ1bW1rL0KeOukpfFn1Zk/MKZdedpHxkdUl1WN4D0OTfsTaWzH4uTr
+        1VmvmdJfM2X8tMpQNysfpjAEc26P4totQkvric32XVzc8MgIayuAEMBA4bhlVFpuydXn0bp1RRxE0bno
+        eONeNghJUjY5yDrWNqelhaISoR8GkBSrQg875QG4NE9OKk7JiEgnoOLuqqQFh2XY5DMbhmDuXl0da69C
+        RQvBNiiC7ffynMurEbyUeinw2fPxO1pa+JBsuccURChp/ciU/vWj2sj6sPCSaKmsojUxOYmt8ahP3Brh
+        sM/NeZfdGvGtcJhLVBerKy7TymKB5+TThPdJ/VQzTHNrwyqtH5sytrbeXPYzBUDa+DDN2iJUtKRCgrqF
+        Z8zoW/FqOEF8Li8NaASjg/RjS0oy/OLYtllZV5j4OV7w8kMrCxubCqR8/0mV4c2ay83z8scZLZPJyTDN
+        2iJkWoIgSGU3JJbdcCjEuTwaThDO6QkF1XW5okj2Vvk19jJMAhzP9IUg4vju/RvYjPDWD41pn5pNboFd
+        IlDuYTSvsBAEpDeATGtufv5CUlJHd7fUhG14C76hv26O90B8fq8PDtDScrvo1X7X78jZr+htUUQAuqsr
+        wTPePHEvHnxQ+VZz4c6OUqRXv3NO0gTaOzsvJiXNLyywtpJWT2/v+YSE6ZkZ1hYdhoUGAwLKu8AHMDvy
+        HfxAFOTkDAP6zfSrcLWmowtrgGAIxkaWgXNijvd6g4GgajCZmp4+l5Bg7u1l7QgtqN0oKbmcl+cPqL6Z
+        gn4haoZBYFVOMhzqo0NSTZeAJWE9oMV7fTycTf3tC3h5wefHnFitMkFhFKZvlpZG2DJaLpcrMTW1vqlJ
+        ai76uWHPovQsRVPDSRIEVxtQUZ+ywS52avWVApbKKljX2AgCkYsho2UdHDwbF2cfG5Oa7YsTmzsKM+zd
+        ywG6kwV/QDMpBLkMuggulhhZJSzBnkYzqmA/KZc0arej3A8Msf+bGK3Kqqq0rKzIXdE0M/xmY+YbDYbT
+        g400w4MhkPA6PSinyC04AwGS0g7P4oaQA4qX0FQxEBcA/6Hm0XlW3yOa0hDA6/WmZmaChtSktDiOS8/O
+        rjDJ/6gUTfRtaDD8qinr5EA98hSpRzNXSgicQ8EQnAQzShvYBGwwPR6ow6gvsTMCgvJjGpNEqrRyCFBh
+        NIIG56PxobTGnj5FBPsVV+SUkc7ftOQY7N2cMovDYXgCKaxkoxTEWtIE71BAmPX4jPaZu6PTEam0Tzto
+        SoXhY8mFcvSxmwcGUO7HxsfxTGk1NDcj3Zwul9hL0Thv71qehHOkJszQYK2R+FScNFdUexOJYZ/eYera
+        qZDtxq7khzYP/IdFinMqaTmdzoSUlMaWFjzH4JMtNz+/+PZtpQZDGIkSRESilnuImGo+BFSML64Zqhk6
+        p5f21/R8UNW9SyG7q7ovdA/1zC67/AEMYKoiUCVB40p+PupFzOTU1IXExG6zmXWKgAEk01qbHKUfaYGA
+        Qg/KgVCQXaZFiOzoe9TMq9anGloQuG3fvQf/um9J7bWV2RxOXq6UoAEyoBTT3NqKwj87Jx8FCAQl9Awb
+        +AyeA5tIpOZ4z92ZoWN9Vcetdc0LYyOepe5lx/kn9x8ss++AJZ//dIcVPDTMIHiJEO+pfvB4Xk4e0AAZ
+        UIrJycvDCa08JukO1xLyIg+QYZICSsZj10zySMdfu25gt25oyMC2/XXz5d+35mGjvN6QcbSvyre6V/oX
+        XEfqHj7rs4i0TM5LmgBofH/tWs7VqzH4hqxtaGCvRSBXlJzo8SfucATF4VspmbJ+8qjyty25P69Ph/yC
+        cqKCBxDCL+SXTVmVM+wiD1SMTsE8fPOsvG/sKrWpPrFq6utBKeZUbGxrRwd7JwLeAhVcS/ALipEjYpZ3
+        l04NXBppjxtuTbC1Jdra15J4W1vF9FAko71CENWhYGC8cFAr1wbGzbOqP5hABpRi8KV6u7w8yjZ8FQCN
+        22VluBXGIII4jO4YjfiMxhXxFQoIgAbIgFIMTp67JtN/L1w4cebMKxfQABmO4/4HyAsmuqh4XB8AAAAA
+        SUVORK5CYII=
 </value>
   </data>
 </root>
