Update QuanLyKH and GUI QuanLyChiPhi - Hung

--- a/QuanLyTourDuLich/QuanLyChiPhi_Them.resx
+++ b/QuanLyTourDuLich/QuanLyChiPhi_Them.resx
@@ -60,34 +60,21 @@
   <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        /9j/4AAQSkZJRgABAQEASABIAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsN
-        DhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQU
-        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCAAoACgDAREAAhEBAxEB/8QA
-        GgAAAwADAQAAAAAAAAAAAAAABgcIAQIDBP/EADMQAAEDAQcCBAQFBQAAAAAAAAECAwQRAAUGEhMUITFh
-        BwgyURVBQoEWF6Gx8RgiJFJi/8QAGgEAAgMBAQAAAAAAAAAAAAAABgcDBQgBAv/EAC0RAAECBAUCBQUB
-        AQAAAAAAAAECEQADBBIFEyExUUGBBhQiYfAVFjJxkaGx/9oADAMBAAIRAxEAPwB2X3iW+DfctCLweSAv
-        pUe1TbNNZXVQqVgTDvGhaWjpzJSSgRs7Pv8AiFvdTJjGogOI1UlGZJ+oVHI72iVU10tsxag+ofTTn9RK
-        inpJj2JBbTTXXiGg74ZT0eFP4pTiC8BP2gmbYoTp5etOlfTzWxwcHnjB/qPmFX23Nozcc7dYDRi0k4r5
-        DJTbda+rv/zfpCtjTcRzQ8Y0uXJ0kFxzRSV5E/7Gg4Hc2B0VFfNfLWosHLasOT7QYrkUctr0gPoH0c8f
-        uMXJiW+BfMVK7weUM/v2JFpaKuqjUoCphZ4jqaOnElZCBtHNT5i4kflhpt4svpcCHhVC8tDRQ9jTm0M5
-        eXWqmM7KBY7FuhiaUjMpRLdnBDjcO+0V+6/cGI8IXfiDEN3xG4qIyJv+e2lYjhSQTyR/PHFtAK8lXUku
-        sq5YtYK9QBtcP85hGJ83R1S6WlWbnKfSTqxb5xAZ/UrhUyzF2N47L0bgx05KdK5M2an2+1qD7vwu/KZV
-        uz26fx3btF59q4lZmem7h9f6zP3gzTKuPDmDLxv/AA7d8R2KqMqYEwG0oEiiSRUgfxza/CqOho5lXRyx
-        axV6QBcw9vgijaqrKtFLVLNzhPqJLOff4YjlUpS7+TNWhtsOOqdKWhRCa1NEj2FeLZ7lTHqxOIZy+mwf
-        j2h7LltTmU7sANdy3MM3win4AEi+BixcJM7dJ2+/rkyU5p9PqrWvb5WOsCThCpk84jbfdpds3t033gOx
-        s4qlEoUF1tpe3d369dtoZPmRLv5cxlxOYQmMl7S9OSisnT5Zsv6WKfGN4wsZX43JduNW7O0DPhIIOJHN
-        /K0t+9H7s8S2t8qVUE2R8Oa2Kk8tqnk+HElcw5Ye8eLRc9OSic554pmzfrZ4eDis4Wc38biz8aP2d4TP
-        iwIGJDL/ACtDtzq3dm/yFR473xgFV3w14RMJU5DripCoCSlGShpX6T/dSlPlX5WEfEQwg5X062+4vbs3
-        v032gs8PDFXmefusYNdu79Ou28J+O6Zl/Oxy+2yHpAb1XlUQiqqZlH2FantYSmys2fY7OWc7a8waIVl0
-        97OwfTfTj3i33l4YwVgq6sPYkvaEYS4qISTeLqUCSAkA8E9P245s/bKSjokUdWsFLBPqIFzBuvwQggqq
-        rKxdXSIIU5V6QTa59vhgSHlowUZO/EmfsaauhuhpZevrpmy0/wCvvYe+zsMvzHVbu12n9Z2794vvu7Er
-        Mtk3bO2v8dn7doLIkjC2NcH3rh3Dt7wtm3FXCX8OcSoRkqSQDQHp+/PNiFKaOso5lHSLASxT6SDa4b5z
-        FCo1dHVoq6tBucK9QIuYv84iEsSu7ORMiiQ3JSytTQdZNUOUURmSfY0qOxsgUyMqaUO9pIcbFuPaNAoV
-        mSxMYhwCx3D8wOT5j933lLYlNuMyW3VIdadQQpKgSCCD0tZTJBJIWGMdlLSUAoLgx2cxQ7LLQkPvSA0g
-        NN6y1LyIHRKa1oOw4t4mS5k1r1EtoHLsOI9S0SpT5aQH1LBnPJhyteZeOjwWOCfhMje7MwBO1xp6daZq
-        equXinTvSxcMbbCvIWG62130bnnbpAUfDpOL/ULxZdcza/rjfrCXGJnYqnNs88xqILa9JSkZkHqk06js
-        eLCMqUuW9qmfQsW04g1mIlzWvSC2ocPrzHlZefvWQ3EitOSJL60ttstoJUtRNAALSy5BcJSNY4uYlCSp
-        RYCP/9k=
+        /9j/4AAQSkZJRgABAQEASABIAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwg
+        JC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIy
+        MjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QA
+        GAAAAwEBAAAAAAAAAAAAAAAAAAYHBQj/xAA2EAABAgQEAwQGCwAAAAAAAAACAQUAAwQRBhITMRQVIRYX
+        QnEHQWGSobEiJCUyRFJigZHR4f/EABYBAQEBAAAAAAAAAAAAAAAAAAMFBP/EACERAAICAgMAAgMAAAAA
+        AAAAAAECAAMEERITMRQiIUGx/9oADAMBAAIRAxEAPwC+dERFVLWjKecRtbFLQq6pECJLjLFFIy8kSDEb
+        yDEx1FcQoRAlgFfES9ESOe3BwqHOsm1VVNKZNmLciJd424mJ3/ZvJOzc3o+q+/yV3vVZUmZeFrMv5rD8
+        rwzs+I2t9lqVDUiZIlylkmUh80WJDyJv7redaH2hxGTVzrtqW2vbaFpvcKhsrZdVSzSlTZRXEk3T2eXs
+        jT8Om1W4bBEyfPvqI7NHc6aSCMnDbyD8yU9eKIJGlpgp4TToqQRKZSpKn0S0jh1DL4Yr+lXOmGadBvl4
+        lM3ulb4wkMXYXlMnnXFcwuupp6lt1tt02ivYjZwfWOooVVEM0vLJfCSdUWOfHBvqWysmUtVKKVNlFYhX
+        1f2ntirh8baeHLRBkTO3Vf2a2CJXUTCPd9+I5Drfrz58/wDO8I772G5RO5ItVx/TT1NS26X36bQc+b+6
+        /kqT/r/EZ9PIu2pffbaFpvb6hyrJdLTSymzJhWER9f8AkJRjkFmLEaMPJyAVUKoOwJXvRRn7NVGa+XiV
+        y+6N/jBDNhxnBiZKegFcxAl5hJ4jXqqwRLyHFlrMP2ZaxazXSqN6JrWjJecNtj9LQa+mQyFLDMFcpj5K
+        kEEErFTyU/mI6K44sNiLPdQy6ubiazLf7tx+drwzM+HGxilqNBSiBF0KYv0jL91gghHyLbBpmJhV4tNZ
+        5IujNaCCCCmif//Z
 </value>
   </data>
 </root>
