--- a/QuanLyTourDuLich/QuanLyTour.resx
+++ b/QuanLyTourDuLich/QuanLyTour.resx
@@ -57,6 +57,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="Id_Tour.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Ten_Tour.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="MoTa.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="LoaiTour.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -173,23 +185,6 @@
         y+6N/jBDNhxnBiZKegFcxAl5hJ4jXqqwRLyHFlrMP2ZaxazXSqN6JrWjJecNtj9LQa+mQyFLDMFcpj5K
         kEEErFTyU/mI6K44sNiLPdQy6ubiazLf7tx+drwzM+HGxilqNBSiBF0KYv0jL91gghHyLbBpmJhV4tNZ
         5IujNaCCCCmif//Z
-</value>
-  </data>
-  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        /9j/4AAQSkZJRgABAQEASABIAAD/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwg
-        JC4nICIsIxwcKDcpLDAxNDQ0Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIy
-        MjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCAAoACgDASIAAhEBAxEB/8QA
-        GQABAAMBAQAAAAAAAAAAAAAAAAUGBwQI/8QAMhAAAQMDAgMGAgsAAAAAAAAAAQIDBAAFBhEhEhNBByIx
-        UXGBcpEUFSYyM1JTYaGi4f/EABUBAQEAAAAAAAAAAAAAAAAAAAAD/8QAGhEAAwADAQAAAAAAAAAAAAAA
-        AAEDERMhEv/aAAwDAQACEQMRAD8A3+qLc+1Www5zkKCzOuz7R0X9AZ40JPxagH21p2q3OVDxVqDCdLT9
-        0lIhcwbFKFa8XzA09zXPEssGwWSHEht8slPEQNtR4anzJ8atGXt9IWrrXCUx7tFsWQzfq9CpEK4HwizW
-        +WtXw9D6a61bqyHK7Q1dLM86O5NioL0Z9Oy21p7w0PltWg4beHL/AIdaro9+NIYBc/dQ2UfmCaWjreBC
-        21E7SlKiXKj2i49KyHFlIt+9whvIlxk/mWjXu+4J99KqVry+DeWEiRJTGmMjluxZCuBbRHiNDptrWt1B
-        XjDccv73OulniyXv1FJ0WfVQ0Jq0bObI2iqIyfMcxgQ7VJhQpTT0t5BQpTZ4kspOxUoj1/mtcxKDEtmJ
-        WuHCkNyI7UZAQ82dUubalQPkSSaQcTx+2QH4UO0RGo8hBQ8gNA8xJ6KJ3I9awf7QdkGW8KdXYTn3U6kN
-        Smgf6qHzB8wd1KuryxKSksI9I0qKx7IIGT2dq5W53jZXspJ2U2oeKVDoR/tKiWJWlKUAqKyDHrdk1pct
-        1yZ5jK90qTsptXRST0IpSgObE8Tt+H2lUCAp1wLcLrjjxBUtRAHQADYAaClKUB//2Q==
 </value>
   </data>
 </root>
